k8s_test/search-crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-crawler
  labels:
    app: search-engine
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-engine
      component: crawler
  template:
    metadata:
      name: search-crawler
      labels:
        app: search-engine
        component: crawler
    spec:
      containers:
      - image: timur8298/crawler:test
        name: search-crawler
